--- a/frontend/src/components/layout/Container/Container.css
+++ b/frontend/src/components/layout/Container/Container.css
@@ -3,6 +3,9 @@
   width: 100%;
   margin: 0 auto;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /* Large Desktop: 1600px+ */
